Make all type singletons statically imported + fix minor PMD violations